Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adult",
     "advanced": "Avançat",
+    "age": "edat",
     "agent": "Agent",
     "agent-commission-info": "Només s'aplicarà a l'agent seleccionat",
     "agent-dont-have-associated-supplier": "L'agent no té un proveïdor associat",
@@ -160,6 +161,7 @@
     "billing": "Facturació",
     "billing-address": "Adreça de facturació",
     "birth-date": "Data de naixement",
+    "birthdate": "Data de naixement",
     "birthday": "Aniversari",
     "block-date": "Data de bloqueig",
     "blocked": "Bloquejat",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Còpia de seguretat",
     "dashboard-backup-p": "Us recordem que teniu instal·lat FacturaScripts al vostre PC, per tant les dades (les factures, clients, etc...) s'emmagatzemen al vostre PC i només al vostre PC. Feu còpies de seguretat de forma regular i deseu aquestes còpies lluny del PC.",
     "dashboard-for": "Tauler de %company%",
+    "data-form-error": "Error en les dades del formulari",
     "data-source": "Dades d'origen",
     "database": "Base de dades",
     "database-error": "Error en connectar a la base de dades",
@@ -454,6 +457,7 @@
     "description2": "Descripció 2",
     "description3": "Descripció 3",
     "design": "Disseny",
+    "destination": "Destinació",
     "destination-warehouse": "Magatzem de destí",
     "detail": "Detall",
     "details": "Detalls",
@@ -531,6 +535,7 @@
     "enabled": "Actiu",
     "enabled-plugins": "Plugins actius",
     "encrypt": "Xifrar",
+    "end": "Fi",
     "end-date": "Data de finalització",
     "end-month": "Mes de fi",
     "end-time": "Hora de finalització",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Error comprovant el nombre '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "S'ha produït un error en connectar-se al servidor Memcache.",
     "error-deleting-lines": "Error en eliminar línies",
+    "error-generating-qr-code": "No s'ha pogut generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Error a la vista %viewName%. Cal informar el 'name' en qualcuna columna de l'xml",
     "error-on-xml-file": "Error en arxiu XML %fileName%",
     "error-processing-xmlview": "S'ha produït un error al processar la vista XML, el fitxer '%fileName%' no existeix o no és correcte",
@@ -592,6 +598,7 @@
     "exercises": "Exercicis",
     "exit": "Sortir",
     "expedient": "Expedient",
+    "expedients": "Expedients",
     "expense-subaccount": "Subcompte de despeses",
     "expenses": "despeses",
     "expiration": "Venciment",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "La cookie de sessió ha fallat",
     "login-image": "Imatge de login",
     "login-ok": "Sessió iniciada satisfactòriament (cookie). Usuari: '%nick%'",
+    "login-password-changed": "Contrasenya canviada correctament",
     "login-password-fail": "Error a l'iniciar sessió",
     "login-text": "Escriu el vostre nom d'usuari i contrasenya per iniciar sessió",
     "login-to-continue": "Iniciar sessió per continuar",
@@ -1026,6 +1034,7 @@
     "no": "No",
     "no-data": "No hi ha dades",
     "no-data-received-form": "Cap dada rebuda per formulari",
+    "no-document-selected": "No s'ha seleccionat cap document",
     "no-extra-lines": "No afegir línies extra",
     "no-gaps-found": "Cap forat trobat",
     "no-invoice": "Sense factura",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "No hi ha prou estoc de %reference%",
     "not-passed-integrity-check": "Alguns arxius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir més detalls aquí<\/a>.",
     "not-public": "No públic",
+    "not-sent": "No enviat",
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "E-mail %email% no vàlid",
     "not-valid-fiscal-number": "El %type% %number% no és vàlid",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "Es requereix l'extensió %extension% a la configuració de PHP",
     "php-extension-not-found": "No tens l'extensió %extension% de PHP instal·lada.",
     "php-support-end": "El suport per a PHP %current% acabarà aviat. Si us plau, actualitza PHP a la versió %min% o superior.",
+    "php-version-too-new": "Es recomana utilitzar una versió de PHP entre %min_version% i %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
     "picking": "Picking",
     "plan": "Pla",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Llegit per %nick% el %date%",
     "read-more": "Llegir més",
     "readonly": "Només lectura",
+    "reason": "Motiu",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucció completada",
     "rebuild-stock": "reconstruir stock",
@@ -1274,6 +1286,7 @@
     "reference+description": "Referència + Descripció",
     "refresh": "Recarregar",
     "refresh-page": "Recarregar la pàgina",
+    "refund": "Devolució",
     "refund-amount": "Quantitat retornada",
     "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
@@ -1361,6 +1374,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar dades anònimes",
     "send-audios": "Enviar àudios",
+    "send-code-totp": "Enviar codi TOTP",
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
     "send-invoices": "Enviar factures",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "S'ha produït un error en enviar el correu electrònic",
     "send-mail-ok": "Correu enviat",
     "send-videos": "Enviar vídeos",
+    "sent": "Enviant",
     "sent-a-audio": "Va enviar un àudio",
     "sent-a-document": "Va enviar un document",
     "sent-a-location": "Va enviar una ubicació",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Transferències d'existències",
     "stockmax": "Estoc màx.",
     "stockmin": "Estoc mín.",
+    "storage": "Ubicació",
     "storage-limit-almost": "Límit d'emmagatzematge gairebé aconseguit (%limit%). Queden %free%",
     "storage-limit-reached": "Límit d'emmagatzematge assolit",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Import totaliva de %docType% %docCode% incorrecte (%docTotalTax%). Import correcte: %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línia IVA de l'impost %taxCode% de la factura. Valor correcte: %totalLine%",
     "totals": "Totals",
+    "totp-secret-key-not-set": "L'usuari %nick% no té una clau secreta TOTP configurada",
     "town": "Població",
     "tracking-code": "Codi de seguiment",
     "transfer": "Transferència",
@@ -1578,11 +1595,12 @@
     "transfers-stock": "Transferències d'estoc",
     "translation": "Traducció",
     "translations": "Traduccions",
+    "transport": "Transport",
     "travel": "Viatge",
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "Autenticació en 2 passos",
+    "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
     "type-alert": "Tipus alerta",
     "type-critical": "Tipus crític",
@@ -1671,6 +1689,7 @@
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "Dimecres",
+    "weekly": "Setmanalment",
     "weeks": "Setmanes",
     "weight": "Pes",
     "which-logs-store": "Què logs emmagatzemar",
