--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -65,6 +65,7 @@
     "administrator": "Verwalter",
     "adult": "Erwachsene",
     "advanced": "Avanzado",
+    "age": "Alter",
     "agent": "Agent",
     "agent-commission-info": "gilt nur für den ausgewählten Agenten",
     "agent-dont-have-associated-supplier": "der Agent hat keinen assoziierten Lieferanten",
@@ -160,6 +161,7 @@
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
     "birth-date": "Geburtsdatum",
+    "birthdate": "Geburtsdatum",
     "birthday": "Geburtstag",
     "block-date": "Sperrungsdatum",
     "blocked": "verstopft",
@@ -281,7 +283,7 @@
     "companies": "Firmen",
     "company": "Unternehmen",
     "company-commission-info": "Es wird nur für das ausgewählte Unternehmen angewendet",
-    "company-iban-changed": "Die IBAN des Bankkontos %account% wurde geändert. Früher war es %old% und jetzt ist es %new%.",
+    "company-iban-changed": "Die IBAN des Bankkontos %account% wurde geändert. Früher war es %old% und nun ist es %new%.",
     "company-manager": "Firmenleiter",
     "company-name": "Name der Firma",
     "company-tax": "Körperschaftsteuervorschriften",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Sicherungskopie",
     "dashboard-backup-p": "Wir erinnern Sie daran, dass Sie FacturaScripts auf Ihrem PC installiert haben, daher werden die Daten (Rechnungen, Kunden usw.) auf Ihrem PC und nur auf Ihrem PC gespeichert. Erstellen Sie regelmäßig Backups und bewahren Sie diese Sicherungskopien außerhalb des PCs auf.",
     "dashboard-for": "Taffel der %company%",
+    "data-form-error": "Fehler bei den Formulardaten",
     "data-source": "Datenquelle",
     "database": "Datenbank",
     "database-error": "Fehler bei der Verbindung zur Datenbank",
@@ -454,6 +457,7 @@
     "description2": "Beschreibung 2",
     "description3": "Beschreibung 3",
     "design": "Design",
+    "destination": "Ziel",
     "destination-warehouse": "Ziellager",
     "detail": "Detail",
     "details": "Details",
@@ -531,6 +535,7 @@
     "enabled": "aktiviert",
     "enabled-plugins": "Aktivierte Plugins",
     "encrypt": "Verschlüsseln",
+    "end": "Ende",
     "end-date": "Endtermin",
     "end-month": "Endmonat",
     "end-time": "Endzeit",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Fehler beim Überprüfen der Nummer '%vat-number%' im VIES-System",
     "error-connecting-memcache": "Fehler beim Verbinden mit dem Memcache-Server.",
     "error-deleting-lines": "Fehler beim Zeilen löschen",
+    "error-generating-qr-code": "QR konnte nicht generiert werden: %message%, %url%",
     "error-no-name-in-settings": "Fehler beim Testen der Ansicht %viewName%. Keine 'name'-Spalte in XML",
     "error-on-xml-file": "Fehler in der XML-Datei %fileName%",
     "error-processing-xmlview": "Fehler beim Verarbeiten der XML-Ansicht, Datei '0' existiert nicht oder ist nicht korrekt",
@@ -592,6 +598,7 @@
     "exercises": "Übungen",
     "exit": "Beenden",
     "expedient": "Verfahren",
+    "expedients": "Expediente",
     "expense-subaccount": "Aufwandsunterkonto",
     "expenses": "Kosten",
     "expiration": "Ablauf",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Session-Cookie ist fehlgeschlagen: Möglicherweise haben Sie sich von einem anderen Gerät oder Browser angemeldet.",
     "login-image": "Login-Bild",
     "login-ok": "Melden Sie sich erfolgreich an (Cookie). Benutzer: '0'",
+    "login-password-changed": "Passwort erfolgreich geändert",
     "login-password-fail": "Anmeldung fehlgeschlagen",
     "login-text": "Anmeldung",
     "login-to-continue": "Melden Sie sich an, um fortzufahren",
@@ -1026,6 +1034,7 @@
     "no": "nicht",
     "no-data": "Keine Daten",
     "no-data-received-form": "Keine Daten vom Formular erhalten",
+    "no-document-selected": "Es wurde kein Dokument ausgewählt.",
     "no-extra-lines": "Keine zusätzlichen Zeilen hinzufügen",
     "no-gaps-found": "Keine Lücken gefunden",
     "no-invoice": "keine Rechnung",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "Nicht genügend Lagerbestand von %reference%",
     "not-passed-integrity-check": "Einige Dateien haben die Integritätsprüfung nicht bestanden ... <br\/>Du kannst <a class='alert-link' target='_blank' href='IntegritySystemCheck'>hier weitere Details erhalten<\/a>.",
     "not-public": "Nicht öffentlich",
+    "not-sent": "Nicht gesendet",
     "not-stored-content": "Inhalt nicht gespeichert",
     "not-valid-email": "Ungültige E-Mail %email%",
     "not-valid-fiscal-number": "Ungültige Steuernummer% type% %number%",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "PHP-Erweiterung benötigt: %extension%",
     "php-extension-not-found": "Sie haben die PHP-Erweiterung %extension% nicht installiert.",
     "php-support-end": "PHP-Endsupport",
+    "php-version-too-new": "Es wird empfohlen, eine PHP-Version zwischen %min_version% und %max_version% zu verwenden. Derzeit haben Sie die Version %version%.",
     "physical-stock": "Physischer Bestand",
     "picking": "Kommissionierung",
     "plan": "Planen",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Gelesen von %nick% am %date%",
     "read-more": "Mehr lesen",
     "readonly": "Nur lesen",
+    "reason": "Grund",
     "rebuild": "Wiederherstellen",
     "rebuild-completed": "Wiederaufbau abgeschlossen",
     "rebuild-stock": "Bestand neu erstellen",
@@ -1274,6 +1286,7 @@
     "reference+description": "Referenz + Beschreibung",
     "refresh": "Aktualisierung",
     "refresh-page": "Seite neu laden",
+    "refund": "Rückerstattung",
     "refund-amount": "Rückzahlungsbetrag",
     "refund-payment-concept": "Rückzahlung der Zahlung %document%",
     "refunds": "Rückerstattungen",
@@ -1361,6 +1374,7 @@
     "send": "Senden",
     "send-anonymous-data": "Anonyme Daten senden",
     "send-audios": "A",
+    "send-code-totp": "TOTP-Code senden",
     "send-documents": "Dokumente senden",
     "send-images": "Bilder senden",
     "send-invoices": "Rechnungen senden",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Fehler beim Senden der E-Mail",
     "send-mail-ok": "E-Mail erfolgreich gesendet",
     "send-videos": "Videos senden",
+    "sent": "Gesendet",
     "sent-a-audio": "h",
     "sent-a-document": "Ein Dokument gesendet",
     "sent-a-location": "Standort gesendet",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Bestandübertragungen",
     "stockmax": "Lager max.",
     "stockmin": "Lager min.",
+    "storage": "Lager",
     "storage-limit-almost": "Speicherlimit fast erreicht (%limit%). Es sind noch %free% übrig",
     "storage-limit-reached": "Speicherlimit erreicht",
     "stripe": "Streifen",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Gesamtsteuerbetrag von 0 1 falsch (2). Richtige Menge: 3",
     "totallinea-value-error": "Fehler im Gesamtbetrag der Mehrwertsteuerzeile der Steuer 0 der Rechnung. Richtiger Wert: 1",
     "totals": "Summen",
+    "totp-secret-key-not-set": "Der Benutzer %nick% hat keinen TOTP-Geheimschlüssel konfiguriert.",
     "town": "Stadt, Dorf",
     "tracking-code": "Tracking-Code",
     "transfer": "Übertragen",
@@ -1578,11 +1595,12 @@
     "transfers-stock": "Bestandsübertragungen",
     "translation": "Übersetzung",
     "translations": "Übersetzungen:",
+    "transport": "Transport",
     "travel": "Reise",
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
     "two-factor-auth": "Zwei-Faktor-Authentifizierung",
-    "two-factor-enabled": "Aktivierung der Zwei-Faktor-Authentifizierung",
+    "two-factor-enabled": "Zwei-Faktor-Authentifizierung aktivieren",
     "type": "Typ",
     "type-alert": "Typwarnung",
     "type-critical": "Kritischer Typ",
@@ -1671,6 +1689,7 @@
     "web": "web:",
     "website": "Webseite",
     "wednesday": "Mittwoch",
+    "weekly": "Wöchentlich",
     "weeks": "Wochen",
     "weight": "Gewicht",
     "which-logs-store": "Welche Logs speichern",
