--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -65,6 +65,7 @@
     "administrator": "Administrator",
     "adult": "Adult",
     "advanced": "Advanced",
+    "age": "Age",
     "agent": "Agent",
     "agent-commission-info": "It will only apply to the selected agent",
     "agent-dont-have-associated-supplier": "The agent don't have an associated supplier",
@@ -160,6 +161,7 @@
     "billing": "Billing",
     "billing-address": "Billing address",
     "birth-date": "Birth date",
+    "birthdate": "Date of birth",
     "birthday": "Birthday",
     "block-date": "Block date",
     "blocked": "Blocked",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Backup",
     "dashboard-backup-p": "We remind you that you have FacturaScripts installed on your PC, therefore the data (invoices, customers, etc...) are stored on your PC and only on your PC. Make regular backups and keep those copies away from your PC.",
     "dashboard-for": "Dashboard for %company%",
+    "data-form-error": "Error in the form data",
     "data-source": "Origin data",
     "database": "Database",
     "database-error": "Error connecting to the database",
@@ -454,6 +457,7 @@
     "description2": "Description 2",
     "description3": "Description 3",
     "design": "Design",
+    "destination": "Destination",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detail",
     "details": "Details",
@@ -531,6 +535,7 @@
     "enabled": "Enabled",
     "enabled-plugins": "Active plugins",
     "encrypt": "Encrypt",
+    "end": "End",
     "end-date": "End date",
     "end-month": "End month",
     "end-time": "End time",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Error checking '%vat-number%' in VIES system",
     "error-connecting-memcache": "Error connecting to Memcache server.",
     "error-deleting-lines": "Error deleting lines",
+    "error-generating-qr-code": "Could not generate QR: %message%, %url%",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Error processing XML View, file '%fileName%' not exist or is incorrect",
@@ -592,6 +598,7 @@
     "exercises": "Exercises",
     "exit": "Exit",
     "expedient": "Expedient",
+    "expedients": "Expedients",
     "expense-subaccount": "Expense subaccount",
     "expenses": "Expenses",
     "expiration": "Expiration",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Session cookie failed",
     "login-image": "Login image",
     "login-ok": "Login successfully (cookie). User: '%nick%'",
+    "login-password-changed": "Password changed successfully",
     "login-password-fail": "Login failed",
     "login-text": "Type your user name and password to login",
     "login-to-continue": "Login to continue",
@@ -1026,6 +1034,7 @@
     "no": "No",
     "no-data": "No data",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-document-selected": "No document has been selected",
     "no-extra-lines": "No extra lines",
     "no-gaps-found": "No gaps found",
     "no-invoice": "No invoice",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "Not enough stock of %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "Not Public",
+    "not-sent": "Not sent",
     "not-stored-content": "Content not stored",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "The %type% %number% is not valid",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "The extension %extension% is required in the PHP configuration",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "Support for PHP %current% will end soon. Please update PHP to version %min% or higher.",
+    "php-version-too-new": "It is recommended to use a PHP version between %min_version% and %max_version%. You currently have %version%.",
     "physical-stock": "Physical stock",
     "picking": "Picking",
     "plan": "Plan",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Read by %nick% on %date%",
     "read-more": "Read more",
     "readonly": "Read only",
+    "reason": "Reason",
     "rebuild": "Rebuild",
     "rebuild-completed": "Rebuild completed",
     "rebuild-stock": "Rebuild stock",
@@ -1274,6 +1286,7 @@
     "reference+description": "Reference + Description",
     "refresh": "Refresh",
     "refresh-page": "Refresh page",
+    "refund": "Refund",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Refund of payment %document%",
     "refunds": "Refunds",
@@ -1361,6 +1374,7 @@
     "send": "Send",
     "send-anonymous-data": "Send anonymous data",
     "send-audios": "Send audio",
+    "send-code-totp": "Send TOTP code",
     "send-documents": "Send documents",
     "send-images": "Send images",
     "send-invoices": "Send invoices",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Error when sending the email",
     "send-mail-ok": "Email sent correctly",
     "send-videos": "Send videos",
+    "sent": "Sent",
     "sent-a-audio": "Sent a sound",
     "sent-a-document": "Sent a document",
     "sent-a-location": "Sent a location",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Stock max.",
     "stockmin": "Stock min.",
+    "storage": "Storage",
     "storage-limit-almost": "Storage limit almost reached (%limit%). Remain %free%.",
     "storage-limit-reached": "Storage limit reached",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Total tax amount of %docType% %docCode% incorrect (%docTotalTax%). Correct amount: %calcTotalTax%",
     "totallinea-value-error": "Error in the totallinea value of the VAT line of the tax %taxCode% of the invoice. Correct value: %totalLine%",
     "totals": "Totals",
+    "totp-secret-key-not-set": "User %nick% does not have a TOTP secret key set",
     "town": "Town",
     "tracking-code": "Tracking code",
     "transfer": "Transfer",
@@ -1578,11 +1595,12 @@
     "transfers-stock": "Transfers stock",
     "translation": "Translation",
     "translations": "Translations",
+    "transport": "Transport",
     "travel": "Travel",
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "2-step authentication",
+    "two-factor-enabled": "Enable 2-Step Authentication",
     "type": "Type",
     "type-alert": "Type alert",
     "type-critical": "Type critical",
@@ -1671,6 +1689,7 @@
     "web": "Web",
     "website": "Website",
     "wednesday": "Wednesday",
+    "weekly": "Weekly",
     "weeks": "Weeks",
     "weight": "Weight",
     "which-logs-store": "Which logs store",
