--- a/Core/Translation/es_CR.json
+++ b/Core/Translation/es_CR.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adulto",
     "advanced": "Avanzado",
+    "age": "edad",
     "agent": "Agente",
     "agent-commission-info": "Sólo se aplicará al agente seleccionado",
     "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
@@ -160,6 +161,7 @@
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
     "birth-date": "Fecha de nacimiento",
+    "birthdate": "Fecha de nacimiento",
     "birthday": "Cumpleaños",
     "block-date": "Fecha de bloqueo",
     "blocked": "Bloqueado",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Copia de seguridad",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
     "dashboard-for": "Tablero de %company%",
+    "data-form-error": "Error en los datos del formulario",
     "data-source": "Datos de origen",
     "database": "Base de datos",
     "database-error": "Error al conectar a la base de datos",
@@ -454,6 +457,7 @@
     "description2": "Descripción 2",
     "description3": "Descripción 3",
     "design": "Diseño",
+    "destination": "Destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
@@ -531,6 +535,7 @@
     "enabled": "Activo",
     "enabled-plugins": "Plugins activos",
     "encrypt": "Encriptación",
+    "end": "Fin",
     "end-date": "Fecha de fin",
     "end-month": "Mes de fin",
     "end-time": "Hora finalización",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
     "error-deleting-lines": "Error al eliminar líneas",
+    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Error en archivo XML %fileName%",
     "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
@@ -592,6 +598,7 @@
     "exercises": "Ejercicios",
     "exit": "Salir",
     "expedient": "Expediente",
+    "expedients": "Expedientes",
     "expense-subaccount": "Subcuenta para gastos bancarios",
     "expenses": "Gastos",
     "expiration": "Vencimiento",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Cookie de sesión no válida: probablemente haya iniciado sesión desde otro dispositivo o navegador.",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
+    "login-password-changed": "Contraseña cambiada correctamente",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
@@ -1026,6 +1034,7 @@
     "no": "No",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-document-selected": "No se ha seleccionado ningún documento",
     "no-extra-lines": "No añadir líneas extra",
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "Sin factura",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
     "not-public": "No público",
+    "not-sent": "No enviado",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Email %email% no válido",
     "not-valid-fiscal-number": "El %type% %number% no es válido",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
+    "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
     "physical-stock": "Stock físico",
     "picking": "Picking",
     "plan": "Plan",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "Sólo lectura",
+    "reason": "Motivo",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucción completada",
     "rebuild-stock": "Reconstruir stock",
@@ -1274,6 +1286,7 @@
     "reference+description": "Referencia + Descripción",
     "refresh": "Recargar",
     "refresh-page": "Recargar página",
+    "refund": "Devolución",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Devoluciones",
@@ -1361,6 +1374,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Error al enviar el email",
     "send-mail-ok": "Email enviado correctamente",
     "send-videos": "Enviar vídeos",
+    "sent": "Enviado",
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Transferencias de stock",
     "stockmax": "Stock máx.",
     "stockmin": "Stock mín.",
+    "storage": "Ubicación",
     "storage-limit-almost": "Límite de almacenamiento (%limit%) casi alcanzado (%used%). Quedan %free%",
     "storage-limit-reached": "Límite de almacenamiento alcanzado",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Valor total iva de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línea de IVA del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
     "totals": "Totales",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Población",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
@@ -1578,6 +1595,7 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
+    "transport": "Transporte",
     "travel": "Viaje",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
@@ -1671,6 +1689,7 @@
     "web": "Web",
     "website": "Sitio Web",
     "wednesday": "Miércoles",
+    "weekly": "Semanal",
     "weeks": "Semanas",
     "weight": "Peso",
     "which-logs-store": "Qué logs almacenar",
