--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -65,6 +65,7 @@
     "administrator": "Administratzailea",
     "adult": "Heldua",
     "advanced": "Aurreratua",
+    "age": "adina",
     "agent": "Agentea",
     "agent-commission-info": "Aukeratutako agenteari bakarrik eragingo dio",
     "agent-dont-have-associated-supplier": "Agenteak ez du hornitzale bat lotuta",
@@ -160,6 +161,7 @@
     "billing": "Fakturazioa",
     "billing-address": "Fakturazio helbidea",
     "birth-date": "Jaiotze data",
+    "birthdate": "Jaiotza data",
     "birthday": "Urtebetetzea",
     "block-date": "Blokeatze data",
     "blocked": "Blokeatuta",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Segurtasun kopia",
     "dashboard-backup-p": "Gogorarazten dizugu FacturaScripts zure ordenagailuan instalatuta duzula, beraz, datuak (fakturak, bezeroak, etab...) zure ordenagailuan gordetzen dira eta zure ordenagailuan bakarrik. Babeskopiak egin eta ordenagailutik urrun gorde kopia horiek.",
     "dashboard-for": "%company%-ren arbela",
+    "data-form-error": "Formularioaren datuetan errorea",
     "data-source": "Jatorrizko datuak",
     "database": "Datu basea",
     "database-error": "Errorea datubasearekin konetatzerakoan",
@@ -454,6 +457,7 @@
     "description2": "2. deskribapena",
     "description3": "3. deskribapena",
     "design": "Diseinua",
+    "destination": "Helmuga",
     "destination-warehouse": "Biltegi jasotzailea",
     "detail": "Xehetasuna",
     "details": "Xehetasunak",
@@ -531,6 +535,7 @@
     "enabled": "Aktiboa",
     "enabled-plugins": "Plugin aktiboak",
     "encrypt": "Enkriptatzea",
+    "end": "Bukaera",
     "end-date": "Amaiera data",
     "end-month": "Amaitzeko hilabetea",
     "end-time": "Amaierako ordua",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Errore bat gertatu da Memcache zerbitzarira konektatzean.",
     "error-deleting-lines": "Errore bat gertatu da lerroak ezabatzean",
+    "error-generating-qr-code": "QR-a sortzea ez da posible izan: %message%, %url%",
     "error-no-name-in-settings": "Errore bat dago %viewName% ikuspegian. Xml-an zutabe baten 'name' jakinaraztea falta da",
     "error-on-xml-file": "Errore bat dago %fileName% XML artxiboan",
     "error-processing-xmlview": "Errore bat gertatu XML ikuspegia prozesatzean, '%fileName%' artxiboa ez da existitzen edo ez da zuzena",
@@ -592,6 +598,7 @@
     "exercises": "Ekitaldiak",
     "exit": "Irten",
     "expedient": "Espediente",
+    "expedients": "Fitxategiak",
     "expense-subaccount": "Gastuen azpikontua",
     "expenses": "Gastuak",
     "expiration": "Iraungitzea",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Saioaren cookiea baliogabea da",
     "login-image": "Saioa hasteko irudia",
     "login-ok": "Saioa ondo hasi da (cookie). Erabiltzailea: '%nick%'",
+    "login-password-changed": "Pasahitza arrakastaz aldatu da",
     "login-password-fail": "Erabiltzailea edo pasahitza ez dira zuzenak",
     "login-text": "Idatzi zure erabiltzaile izena eta pasahitza saioa hasteko",
     "login-to-continue": "Hasi saioa jarraitzeko",
@@ -1026,6 +1034,7 @@
     "no": "Ez",
     "no-data": "Ez dago daturik",
     "no-data-received-form": "Ez da inprimaki bidez daturik jaso",
+    "no-document-selected": "Ez da dokumenturik hautatu",
     "no-extra-lines": "Ez gehitu lerro gehigarriak",
     "no-gaps-found": "Ez da hutsunerik aurkitu",
     "no-invoice": "Fakturarik gabe",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "%reference% artikuluaren stock nahikoa ez dago",
     "not-passed-integrity-check": "Fitxategi batzuk ez dute gainditu integritate egiaztapena ...  <br\/>Hemen <a class='alert-link' target='_blank' href='IntegritySystemCheck'> begiratu xehetasunak<\/a>.",
     "not-public": "Ez da publikoa",
+    "not-sent": "Ez da bidalia",
     "not-stored-content": "Ezin da edukia biltegi egin",
     "not-valid-email": "%email% eposta baliogabea",
     "not-valid-fiscal-number": "%type% %number% baliogabea",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "PHP-ren konfigurazioan %extension% luzapena behar da",
     "php-extension-not-found": "%extension% PHP gehigarria instalatu gabe duzu.",
     "php-support-end": "PHP %current%-(r)en laguntza laster amaituko da. PHP %min% bertsiora eguneratu mesedez.",
+    "php-version-too-new": "%min_version% eta %max_version% artean PHP bertsio bat erabiltzea gomendatzen da. Une honetan, %version% duzu.",
     "physical-stock": "Stock fisikoa",
     "picking": "Picking",
     "plan": "Plana",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Irakurri %nick% %date% hartan",
     "read-more": "Gehiago irakurri",
     "readonly": "Irakurri bakarrik",
+    "reason": "Arrazoia",
     "rebuild": "Berregin",
     "rebuild-completed": "Berreraikuntza amaitua",
     "rebuild-stock": "Stocka berritu",
@@ -1274,6 +1286,7 @@
     "reference+description": "Erreferentzia + deskribapena",
     "refresh": "Eguneratu",
     "refresh-page": "Orria eguneratu",
+    "refund": "Itzulketa",
     "refund-amount": "Itzulketaren zenbatekoa",
     "refund-payment-concept": "Devoluzioa egingo da %document% dokumentua itzulita",
     "refunds": "Itzulketak",
@@ -1332,7 +1345,7 @@
     "rules": "Arauak",
     "run": "Exekutatu",
     "running-plugin-cron": "FacturaScripts %pluginName% pluginaren cron exekutatzen",
-    "running-work-queue": "Lan ekitaldien ilara exekutatzen",
+    "running-work-queue": "Lanen ekitaldietako ilara exekutatzen",
     "sales": "Salmentak",
     "sales-invoice": "Salmenta faktura",
     "sales-rate": "Salmenta-tasa",
@@ -1352,7 +1365,7 @@
     "second-trimester": "Bigarren hiruhilekoa",
     "select": "Aukeratu",
     "select-all": "Guztiak hautatu",
-    "select-content-for": "%content%-erako edukia hautatu",
+    "select-content-for": "%content%-erako eduki hautatu",
     "select-none": "Bat ere ez hautatu",
     "select-plugin-zip-file": "Hautatu plugin zip fitxategia:",
     "select-user": "Aukeratu erabiltzailea",
@@ -1361,6 +1374,7 @@
     "send": "Bidali",
     "send-anonymous-data": "Datu anonimoak bidali",
     "send-audios": "Bidali audioak",
+    "send-code-totp": "TOTP kodea bidali",
     "send-documents": "Bidali dokumentuak",
     "send-images": "Bidali irudiak",
     "send-invoices": "Fakturak bidali",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Errorea posta elektronikoa bidaltzean",
     "send-mail-ok": "Posta ondo bidalia",
     "send-videos": "Bideoak Bidali",
+    "sent": "Bidalia",
     "sent-a-audio": "Audio bat bidali du",
     "sent-a-document": "Dokumentu bat bidali du",
     "sent-a-location": "Kokapen bat bidali du",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "stock transferentziak",
     "stockmax": "Gehienezko stocka",
     "stockmin": "Gutxienezko stocka",
+    "storage": "Kokapena",
     "storage-limit-almost": "Biltegi muga ia hurrengora (%limit%). Faltan %free%",
     "storage-limit-reached": "Memoria bere mugara iritsi da",
     "stripe": "Stripe",
@@ -1489,7 +1505,7 @@
     "supplier-estimation": "Hornitzaile aurrekontua",
     "supplier-estimations": "Hornitzaileen aurrekontuak",
     "supplier-have-no-iban": "Hornitzaileak %%iban-kontu bankurik ez du",
-    "supplier-iban-changed": "Hornitzailearen %codproveedor% banku kontuaren iban-a aldatu da. Lehen %old% zen eta orain %new% da.",
+    "supplier-iban-changed": "Hornitzailearen %codproveedor% banku kontuaren IBAN-a aldatu da. Lehen %old% zen eta orain %new% da.",
     "supplier-invoice": "Hornitzaile faktura",
     "supplier-invoice-deleted-successfully": "%docCode% erosketa faktura ondo ezabatu da.",
     "supplier-invoices": "Hornitzaileen fakturak",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "%docType% %docCode% (%docTotalTax%) BEZ totala ez da zuzena. Total zuzena: %calcTotalTax%",
     "totallinea-value-error": "Fakturaren %taxCode% zergaren lerroko BEZ totala baliogabea. Balio zuzena: %totalLine%",
     "totals": "Totala",
+    "totp-secret-key-not-set": "Erabiltzaileak %nick% ez du TOTP gako sekreturik ezarrita",
     "town": "Herria",
     "tracking-code": "Jarraipen kodea",
     "transfer": "Transferentzia",
@@ -1578,10 +1595,11 @@
     "transfers-stock": "Stock transferentziak",
     "translation": "Itzulpena",
     "translations": "Itzulpenak",
+    "transport": "Garraioa",
     "travel": "Bidaia",
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
-    "two-factor-auth": "Bi faktoreko autentifikazioa",
+    "two-factor-auth": "Bi faktoreren autentifikazioa",
     "two-factor-enabled": "Bi pausoetako autentifikazioa aktibatu",
     "type": "Mota",
     "type-alert": "Alerta mota",
@@ -1667,10 +1685,11 @@
     "warehouses": "Biltegiak",
     "warning": "Erne",
     "warnings": "Oharrak",
-    "weak-password": "Pasahitza gutxienez 8 karaktere izan behar ditu, zenbakiak eta letrez osatua.",
+    "weak-password": "Pasahitza gutxienez 8 karaktere izan behar ditu, zenbaki eta letra batekin.",
     "web": "Web",
     "website": "Webgunea",
     "wednesday": "Asteazkena",
+    "weekly": "Astero",
     "weeks": "Asteak",
     "weight": "Pisua",
     "which-logs-store": "Zein log gorde",
