--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -65,6 +65,7 @@
     "administrator": "administrateur",
     "adult": "Adulte",
     "advanced": "Avancé",
+    "age": "Âge",
     "agent": "Agent",
     "agent-commission-info": "Cela s'appliquera uniquement à l'agent sélectionné",
     "agent-dont-have-associated-supplier": "L'agent ne possède pas de fournisseur attitré",
@@ -160,6 +161,7 @@
     "billing": "Facturation",
     "billing-address": "Adresse de facturation",
     "birth-date": "Date de naissance",
+    "birthdate": "date de naissance",
     "birthday": "Anniversaire",
     "block-date": "Date de verrouillage",
     "blocked": "Bloqué",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Sauvegarde",
     "dashboard-backup-p": "Nous vous rappelons que FacturaScripts est installé sur votre PC, donc les données (factures, clients, etc.) sont stockées sur votre PC et uniquement sur votre PC. Effectuez des sauvegardes régulières et conservez ces sauvegardes loin du PC.",
     "dashboard-for": "Tableau de bord pour %company%",
+    "data-form-error": "Erreur dans les données du formulaire",
     "data-source": "Données d'origine",
     "database": "Base de données",
     "database-error": "Erreur de connexion à la base de données",
@@ -454,6 +457,7 @@
     "description2": "Description 2",
     "description3": "Description 3",
     "design": "Diseño",
+    "destination": "Destination",
     "destination-warehouse": "Entrepôt de destination",
     "detail": "Détail",
     "details": "Détails",
@@ -531,6 +535,7 @@
     "enabled": "Activée",
     "enabled-plugins": "Plugins activés",
     "encrypt": "Chiffrement",
+    "end": "Fin",
     "end-date": "Date de fin",
     "end-month": "Mois de fin",
     "end-time": "Heure de fin",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Erreur lors de la vérification du numéro de TVA '%vat-number%' dans le système VIES",
     "error-connecting-memcache": "Erreur lors de la connexion au serveur Memcache.",
     "error-deleting-lines": "Erreur lors de la suppression des lignes",
+    "error-generating-qr-code": "Impossible de générer le QR : %message%, %url%",
     "error-no-name-in-settings": "Erreur dans %viewName% view. Manquant d'informer le 'nom' dans une colonne du xml",
     "error-on-xml-file": "Le fichier XML %fileName% a provoqué une erreur",
     "error-processing-xmlview": "Erreur lors du traitement de XML View, le fichier '%fileName%' n'existe pas ou est incorrect",
@@ -592,6 +598,7 @@
     "exercises": "Des exercices",
     "exit": "Sortie",
     "expedient": "Expéditeur",
+    "expedients": "Expédients",
     "expense-subaccount": "Sous-compte des dépenses",
     "expenses": "Dépenses",
     "expiration": "Délai d'échéance",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Échec du login-cookie",
     "login-image": "Imagen de login",
     "login-ok": "Connectez-vous avec succès (cookie). Utilisateur: '%nick'",
+    "login-password-changed": "Mot de passe changé avec succès",
     "login-password-fail": "Échec de la connexion",
     "login-text": "Entrez votre nom d'utilisateur et mot de passe pour vous connecter",
     "login-to-continue": "Connectez-vous pour continuer",
@@ -1026,6 +1034,7 @@
     "no": "Non",
     "no-data": "Pas de données",
     "no-data-received-form": "Aucune donnée reçue par formulaire",
+    "no-document-selected": "Aucun document sélectionné",
     "no-extra-lines": "Pas de lignes supplémentaires",
     "no-gaps-found": "Aucune lacune constatée",
     "no-invoice": "Pas de facture",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "Stock insuffisant pour %reference%",
     "not-passed-integrity-check": "Certains fichiers n'ont pas passé le test d'intégrité...<br\\\/>Vous pouvez <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir plus de détails ici<\/a>.",
     "not-public": "Non public",
+    "not-sent": "Non envoyé",
     "not-stored-content": "Contenu non stocké",
     "not-valid-email": "Adresse e-mail incorrecte %email%",
     "not-valid-fiscal-number": "Le %type% %number% n'est pas valable",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "L'extension %extension% est requise dans la configuration PHP",
     "php-extension-not-found": "Vous n'avez pas installé l'extension %extension% de PHP.",
     "php-support-end": "Le support pour PHP %current% sera bientôt terminé. Veuillez mettre à jour PHP vers la version %min% ou ultérieure.",
+    "php-version-too-new": "Il est recommandé d'utiliser une version de PHP entre %min_version% et %max_version%. Vous avez actuellement la %version%",
     "physical-stock": "Stock physique",
     "picking": "Préparation de commandes",
     "plan": "Plan",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Lu par %nick% le %date%",
     "read-more": "En savoir plus",
     "readonly": "Lecture seule",
+    "reason": "Raison",
     "rebuild": "Reconstituer",
     "rebuild-completed": "Reconstitution achevée",
     "rebuild-stock": "Reconstituer le stock",
@@ -1274,6 +1286,7 @@
     "reference+description": "Référence + Description",
     "refresh": "Rafraîchir",
     "refresh-page": "Rafraîchir la page",
+    "refund": "Devolución",
     "refund-amount": "Montant retourné",
     "refund-payment-concept": "Remboursement du reçu %document%",
     "refunds": "Remboursements",
@@ -1361,6 +1374,7 @@
     "send": "Envoyer",
     "send-anonymous-data": "Envoyer des données anonymes",
     "send-audios": "Envoyer des audios",
+    "send-code-totp": "Envoyer le code TOTP",
     "send-documents": "Envoyer des documents",
     "send-images": "Envoyer des images",
     "send-invoices": "Envoyer des factures",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Erreur lors de l'envoi de l'e-mail",
     "send-mail-ok": "L'e-mail a été envoyé avec succès",
     "send-videos": "Envoyer des vidéos",
+    "sent": "Envoyé à",
     "sent-a-audio": "Il a envoyé un fichier audio",
     "sent-a-document": "Envoi d'un document",
     "sent-a-location": "Envoi d'un lieu",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Transferts de stock",
     "stockmax": "Stock max.",
     "stockmin": "Stock min.",
+    "storage": "storage",
     "storage-limit-almost": "La limite de stockage est presque atteinte (%limit%). Restez %free%.",
     "storage-limit-reached": "Limite de stock atteinte",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Montant total des taxes de %docType% %docCode% incorrect (%docTotalTax%). Montant correct: %calcTotalTax%",
     "totallinea-value-error": "Erreur dans la valeur totallinea de la ligne de TVA de la taxe %taxCode% de la facture. Valeur correcte: %totalLine%",
     "totals": "totaux",
+    "totp-secret-key-not-set": "L'utilisateur %nick% n'a pas de clé secrète TOTP configurée",
     "town": "Ville",
     "tracking-code": "Code de suivi",
     "transfer": "Transfert",
@@ -1578,11 +1595,12 @@
     "transfers-stock": "Transferts de stock",
     "translation": "Traduction",
     "translations": "traductions:",
+    "transport": "Transport",
     "travel": "Voyage",
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "Authentification à deux facteurs",
+    "two-factor-enabled": "Activer l’authentification à deux facteurs",
     "type": "Type",
     "type-alert": "Type alerte",
     "type-critical": "Type critique",
@@ -1671,6 +1689,7 @@
     "web": "Web",
     "website": "Site Internet",
     "wednesday": "Mercredi",
+    "weekly": "weekly",
     "weeks": "Semaines",
     "weight": "Peso",
     "which-logs-store": "Quels journaux conserver",
