--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adulto",
     "advanced": "Avanzado",
+    "age": "idade",
     "agent": "Axente",
     "agent-commission-info": "Só se aplicará ao axente seleccionado",
     "agent-dont-have-associated-supplier": "O axente non ten un provedor asociado",
@@ -160,6 +161,7 @@
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
     "birth-date": "Data de nacemento",
+    "birthdate": "Data de nacemento",
     "birthday": "Aniversario",
     "block-date": "Data de bloqueo",
     "blocked": "Bloqueado",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Copia de seguridade",
     "dashboard-backup-p": "Lembrámoslle que ten instalado FacturaScripts no seu PC, por tanto os datos (as facturas, clientes, etc...) almacénanse no seu PC e soamente no seu PC. Faga copias de seguridade de forma regular e garde esas copias lonxe do PC.",
     "dashboard-for": "Taboleiro de %company%",
+    "data-form-error": "Erro nos datos do formulario",
     "data-source": "Datos de orixe",
     "database": "Base de datos",
     "database-error": "Erro ó conectar á base de datos",
@@ -454,6 +457,7 @@
     "description2": "Descrición 2",
     "description3": "Descrición 3",
     "design": "Deseño",
+    "destination": "Destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
@@ -531,6 +535,7 @@
     "enabled": "Activo",
     "enabled-plugins": "Plugins activos",
     "encrypt": "Encriptación",
+    "end": "Fin",
     "end-date": "Data de finalización",
     "end-month": "Mes de fin",
     "end-time": "Hora de remate",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Erro comprobando o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar co servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar liñas",
+    "error-generating-qr-code": "Non se puido xerar o QR: %message%, %url%",
     "error-no-name-in-settings": "Error na vista %viewName%. Falta informar el 'name' nalgunha columna do xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro procesando o XML da vista, o ficheiro '%fileName%' non existe ou é incorrecto",
@@ -592,6 +598,7 @@
     "exercises": "Exercicios",
     "exit": "Saír",
     "expedient": "Expediente",
+    "expedients": "Expedientes",
     "expense-subaccount": "Subconta de gastos",
     "expenses": "Gastos",
     "expiration": "Caducidade",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Fallou a cookie da sesión",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada con éxito (cookie). Usuario: '%nick%'",
+    "login-password-changed": "Contrasinal cambiado correctamente",
     "login-password-fail": "Fallo de sesión",
     "login-text": "Introduce o teu nome de usuario e contrasinal para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
@@ -1026,6 +1034,7 @@
     "no": "Non",
     "no-data": "Non hai datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-document-selected": "Non se seleccionou ningún documento",
     "no-extra-lines": "Non engadir liñas extra",
     "no-gaps-found": "Ningún oco atopado",
     "no-invoice": "Sen factura",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "Non hai suficientes existencias de %reference%",
     "not-passed-integrity-check": "Algúns arquivos non pasaron a verificación de integridade ... <br\/>Podes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter máis detalles aquí<\/a>.",
     "not-public": "Non público",
+    "not-sent": "Non enviado",
     "not-stored-content": "Contido non almacenado",
     "not-valid-email": "Email %email% non válido",
     "not-valid-fiscal-number": "O %type% %number% non é válido",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "Requirese a extensión %extension% na configuración de PHP",
     "php-extension-not-found": "Non tes a extensión %extension% de PHP instalada.",
     "php-support-end": "O soporte para PHP %current% rematará pronto. Por favor, actualiza PHP á versión %min% ou superior.",
+    "php-version-too-new": "Recoméndase usar unha versión de PHP entre a %min_version% e a %max_version%. Actualmente tes a %version%",
     "physical-stock": "Accións físicas",
     "picking": "Recollida",
     "plan": "Plan",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Lido por %nick% o %date%",
     "read-more": "Ler máis",
     "readonly": "Só lectura",
+    "reason": "Motivo",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucción completada",
     "rebuild-stock": "Reconstruir stock",
@@ -1274,6 +1286,7 @@
     "reference+description": "Referencia + Descrición",
     "refresh": "Actualizar",
     "refresh-page": "Actualiza a páxina",
+    "refund": "Devolución",
     "refund-amount": "Cantidade devolta",
     "refund-payment-concept": "Devolución do recibo %document%",
     "refunds": "Devolucións",
@@ -1361,6 +1374,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imaxes",
     "send-invoices": "Enviar facturas",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Error ao enviar o email",
     "send-mail-ok": "Email enviado correctamente",
     "send-videos": "Enviar vídeos",
+    "sent": "Enviado",
     "sent-a-audio": "Enviou un audio",
     "sent-a-document": "Enviou un documento",
     "sent-a-location": "Enviou unha ubicación",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Transferencias de stock",
     "stockmax": "Stock máx.",
     "stockmin": "Stock mín.",
+    "storage": "Zona de almacenaxe",
     "storage-limit-almost": "Límite de almacenamento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Límite de almacenamento alcanzado",
     "stripe": "Stripe",
@@ -1532,7 +1548,7 @@
     "template-error": "Erro na plantilla",
     "template-not-found": "Template non atopou",
     "templates": "Padróns",
-    "test": "Test",
+    "test": "Proba",
     "test-mail-not-implemented": "A proba do controlador de correo Mail non está implementada",
     "test-sendmail-not-implemented": "A proba do controlador de correo sendmail non está implementada",
     "text-color": "Cor do texto",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Valor total ive de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Erro no valor total da liña de IVE do imposto %taxCode% da factura. Valor correcto: %totalLínea%",
     "totals": "Totais",
+    "totp-secret-key-not-set": "O usuario %nick% non ten unha chave secreta TOTP configurada",
     "town": "Cidade",
     "tracking-code": "Código de seguimento",
     "transfer": "Transferencia",
@@ -1578,11 +1595,12 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Tradución",
     "translations": "Traducións",
+    "transport": "Transporte",
     "travel": "Viaxe",
     "try-again-later": "Probe de novo máis tarde",
     "tuesday": "Martes",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "Autenticación en dous pasos",
+    "two-factor-enabled": "Activar a autenticación en dous pasos",
     "type": "Tipo",
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
@@ -1671,6 +1689,7 @@
     "web": "Web",
     "website": "Sitio web",
     "wednesday": "Mércores",
+    "weekly": "Semanal",
     "weeks": "Semanas",
     "weight": "Peso",
     "which-logs-store": "Que logs almacenar",
