--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -65,6 +65,7 @@
     "administrator": "Administrator",
     "adult": "Dorosły",
     "advanced": "Zaawansowane",
+    "age": "wiek",
     "agent": "Agent",
     "agent-commission-info": "Dotyczy tylko wybranego agenta",
     "agent-dont-have-associated-supplier": "Agent nie ma powiązanego dostawcy",
@@ -160,6 +161,7 @@
     "billing": "Fakturowanie",
     "billing-address": "Adres do faktury",
     "birth-date": "Data urodzenia",
+    "birthdate": "Data urodzenia",
     "birthday": "Urodziny",
     "block-date": "Data blokady",
     "blocked": "Zablokowany",
@@ -237,7 +239,7 @@
     "choose-payment-method": "Wybierz metodę płatności",
     "choose-serie": "Wybierz serię",
     "choose-source": "Wybierz źródło",
-    "cifnif": "CIF\/NIF",
+    "cifnif": "CIF\\\/NIF",
     "cities": "Miasta",
     "city": "Miasto",
     "click-link-to-add": "Możesz dodać pliki z biblioteki w menu administratora.",
@@ -281,7 +283,7 @@
     "companies": "Firmy",
     "company": "Firma",
     "company-commission-info": "Będzie stosowane tylko do wybranej firmy",
-    "company-iban-changed": "Zmieniono iban konta bankowego %account%. Wcześniej był %old%, a teraz jest %new%",
+    "company-iban-changed": "Zmieniono IBAN konta bankowego %account%. Wcześniej był %old%, a teraz jest %new%",
     "company-manager": "Administrator firmy",
     "company-name": "Nazwa firmy",
     "company-tax": "Podatek dochodowy od osób prawnych",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Kopia zapasowa",
     "dashboard-backup-p": "Przypominamy, że masz zainstalowany FacturaScripts na swoim PC, dlatego dane (faktury, klienci, itp...) są przechowywane tylko na Twoim PC. Regularnie twórz kopie zapasowe i przechowuj je z dala od komputera.",
     "dashboard-for": "Panel %company%",
+    "data-form-error": "Błąd w danych formularza",
     "data-source": "Źródła danych",
     "database": "Baza danych",
     "database-error": "Błąd połączenia z bazą danych",
@@ -454,6 +457,7 @@
     "description2": "Opis 2",
     "description3": "Opis 3",
     "design": "Projektowanie",
+    "destination": "Cel",
     "destination-warehouse": "Magazyn docelowy",
     "detail": "Szczegóły",
     "details": "Detalles",
@@ -531,6 +535,7 @@
     "enabled": "Aktywny",
     "enabled-plugins": "Aktywne wtyczki",
     "encrypt": "Szyfrowanie",
+    "end": "Koniec",
     "end-date": "Data zakończenia",
     "end-month": "Miesiąc zakończenia",
     "end-time": "Czas zakończenia",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Błąd podczas sprawdzania numeru VAT '%vat-number%' w systemie VIES",
     "error-connecting-memcache": "Błąd połączenia z serwerem Memcache.",
     "error-deleting-lines": "Błąd podczas usuwania linii",
+    "error-generating-qr-code": "Nie można wygenerować kodu QR: %message%, %url%",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Błąd w pliku XML %fileName%",
     "error-processing-xmlview": "Błąd przetwarzania XML widoku, plik '%fileName%' nie istnieje lub jest źle sformułowany",
@@ -592,6 +598,7 @@
     "exercises": "Ćwiczenia",
     "exit": "Wyjdź",
     "expedient": "Akta",
+    "expedients": "Ekspedycje",
     "expense-subaccount": "Subkonto wydatków",
     "expenses": "Wydatki",
     "expiration": "Wygaszenie",
@@ -611,7 +618,7 @@
     "field-required": "Pole wymagane: %field%",
     "fields": "Pola",
     "file": "Plik",
-    "file-audio-codec-not-accepted": "Błąd podczas wysyłania pliku audio %fileName%, ponieważ jego kodek %codec% nie jest dozwolony. Dozwolone kodeki to: %supported%",
+    "file-audio-codec-not-accepted": "Błąd podczas wysyłania pliku audio %fileName%, ponieważ jego kodek %codec% jest niedozwolony. Dozwolone kodeki to: %supported%",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nazwa pliku",
     "file-not-exists": "Plik nie istnieje: %fileName%",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Nieprawidłowy ciasteczko logowania",
     "login-image": "Obrazek logowania",
     "login-ok": "Sesja została pomyślnie uruchomiona (ciasteczko). Użytkownik: '%nick%'",
+    "login-password-changed": "Hasło zmienione pomyślnie",
     "login-password-fail": "Użytkownik lub hasło są niepoprawne",
     "login-text": "Wpisz swoją nazwę użytkownika i hasło, aby się zalogować",
     "login-to-continue": "Zaloguj się, aby kontynuować",
@@ -1026,6 +1034,7 @@
     "no": "Nie",
     "no-data": "Brak danych",
     "no-data-received-form": "Nie otrzymano danych z formularza",
+    "no-document-selected": "Nie wybrano żadnego dokumentu",
     "no-extra-lines": "Nie dodawaj dodatkowych linii",
     "no-gaps-found": "Nie znaleziono luk",
     "no-invoice": "Brak faktury",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "Nie ma wystarczającej ilości zapasów %reference%",
     "not-passed-integrity-check": "Niektóre pliki nie przeszły weryfikacji integralności ... <br\/>Możesz <a class='alert-link' target='_blank' href='IntegritySystemCheck'>uzyskać więcej szczegółów tutaj<\/a>.",
     "not-public": "Niepubliczny",
+    "not-sent": "No enviado",
     "not-stored-content": "Zawartość nieprzechowana",
     "not-valid-email": "Email %email% jest nieprawidłowy",
     "not-valid-fiscal-number": "%type% %number% jest nieprawidłowy",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "Nie masz zainstalowanego rozszerzenia %extension% PHP.",
     "php-support-end": "Wsparcie dla PHP %current% wkrótce się kończy. Proszę zaktualizować PHP do wersji %min% lub wyższej.",
+    "php-version-too-new": "Zaleca się użycie wersji PHP pomiędzy %min_version% a %max_version%. Obecnie masz %version%",
     "physical-stock": "Alyz fizyczny",
     "picking": "Kompletacja",
     "plan": "Plan",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Czytaj więcej",
     "readonly": "Tylko do odczytu",
+    "reason": "Powód",
     "rebuild": "Rekonstruować",
     "rebuild-completed": "Przebudowa zakończona",
     "rebuild-stock": "Odbudować zapas",
@@ -1274,6 +1286,7 @@
     "reference+description": "Referencja + Opis",
     "refresh": "Odśwież",
     "refresh-page": "Odśwież stronę",
+    "refund": "Zwolnienie",
     "refund-amount": "Kwota zwrotu",
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Zwróty",
@@ -1361,6 +1374,7 @@
     "send": "Wysłać",
     "send-anonymous-data": "Wyślij dane anonimowe",
     "send-audios": "Enviar audios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
     "send-invoices": "Wyślij faktury",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Błąd podczas wysyłania e-maila",
     "send-mail-ok": "E-mail wysłany pomyślnie",
     "send-videos": "Enviar vídeos",
+    "sent": "Wysłano",
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Przeniesienia zapasów",
     "stockmax": "Max zapasów",
     "stockmin": "Minimalny stan magazynowy",
+    "storage": "Lokalizacja",
     "storage-limit-almost": "Niemal osiągnięto limit przechowywania (%limit%). Pozostało %free%",
     "storage-limit-reached": "Osiągnięto limit przechowywania",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Całkowita wartość VAT %docType% %docCode% niepoprawna (%docTotalTax%). Właściwa wartość: %calcTotalTax%",
     "totallinea-value-error": "Błąd wartości totallinea w linii VAT podatku %taxCode% w fakturze. Prawidłowa wartość: %totalLine%",
     "totals": "Całkowite",
+    "totp-secret-key-not-set": "Użytkownik %nick% nie ma skonfigurowanego klucza sekretnego TOTP",
     "town": "Miejscowość",
     "tracking-code": "Kod śledzenia",
     "transfer": "Transfer",
@@ -1578,10 +1595,11 @@
     "transfers-stock": "Transfery zapasów",
     "translation": "Tłumaczenie",
     "translations": "Tłumaczenia",
+    "transport": "Transport",
     "travel": "Viaje",
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
-    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-auth": "Uwierzytelnianie dwuskładnikowe",
     "two-factor-enabled": "Aktywuj uwierzytelnianie w 2 krokach",
     "type": "Typ",
     "type-alert": "Typ alarmu",
@@ -1671,6 +1689,7 @@
     "web": "Strona internetowa",
     "website": "Strona internetowa",
     "wednesday": "Środa",
+    "weekly": "Tygodniowy",
     "weeks": "Tygodnie",
     "weight": "Waga",
     "which-logs-store": "Jakie logi przechowywać",
