--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -65,6 +65,7 @@
     "administrator": "Správce",
     "adult": "Dospělý",
     "advanced": "Pokročilé",
+    "age": "stáří",
     "agent": "Agente",
     "agent-commission-info": "Sólo se aplicará al agente seleccionado",
     "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
@@ -160,6 +161,7 @@
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
     "birth-date": "Fecha de nacimiento",
+    "birthdate": "Datum narození",
     "birthday": "Cumpleaños",
     "block-date": "Fecha de bloqueo",
     "blocked": "Bloqueado",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Záloha",
     "dashboard-backup-p": "Pamatujte, že máte FakturaScripty nainstalovány na svém počítači, data (faktury, zákazníci atd...) jsou tedy uložena pouze na vašem počítači. Pravidelně dělejte zálohy a uchovávejte tyto zálohy mimo počítač.",
     "dashboard-for": "Tablero de %company%",
+    "data-form-error": "Chyba v datech formuláře",
     "data-source": "Datos de origen",
     "database": "Base de datos",
     "database-error": "Chyba při připojení k databázi",
@@ -454,6 +457,7 @@
     "description2": "Descripción 2",
     "description3": "Descripción 3",
     "design": "Diseño",
+    "destination": "Destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Podrobnosti",
@@ -531,6 +535,7 @@
     "enabled": "Activo",
     "enabled-plugins": "Aktivní pluginy",
     "encrypt": "Encriptación",
+    "end": "Fin",
     "end-date": "Fecha de fin",
     "end-month": "Konec měsíce",
     "end-time": "Hora finalización",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Chyba při kontrole čísla '%vat-number%' v systému VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
     "error-deleting-lines": "Error al eliminar líneas",
+    "error-generating-qr-code": "Nelze vygenerovat QR: %message%, %url%",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Error en archivo XML %fileName%",
     "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
@@ -592,6 +598,7 @@
     "exercises": "Ejercicios",
     "exit": "Salir",
     "expedient": "Expediente",
+    "expedients": "Expedientes",
     "expense-subaccount": "Subúčet nákladů",
     "expenses": "Gastos",
     "expiration": "Vencimiento",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Neplatný relační cookie",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
+    "login-password-changed": "Heslo bylo úspěšně změněno",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
@@ -1026,6 +1034,7 @@
     "no": "No",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-document-selected": "Žádný dokument nebyl vybrán",
     "no-extra-lines": "No añadir líneas extra",
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "Sin factura",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
     "not-public": "Neveřejné",
+    "not-sent": "Neposlané",
     "not-stored-content": "Obsah není uložen",
     "not-valid-email": "Email %email% no válido",
     "not-valid-fiscal-number": "El %type% %number% no es válido",
@@ -1146,7 +1156,7 @@
     "percentage-vat": "% Impuesto",
     "period": "Periodo",
     "personalized": "Personalizované",
-    "pgsql-endpoint": "Konečný bod PostgreSQL",
+    "pgsql-endpoint": "Koncový bod PostgreSQL",
     "pgsql-ssl-mode": "Režim SSL PostgreSQL",
     "phase": "Fase",
     "phone": "Teléfono",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "Ve zkonfiguraci PHP je vyžadováno rozšíření %extension%",
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
+    "php-version-too-new": "Doporučuje se používat verzi PHP mezi %min_version% a %max_version%. Aktuálně máte %version%.",
     "physical-stock": "Stock físico",
     "picking": "Vyřizování",
     "plan": "Plan",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Čteno uživatelem %nick% dne %date%",
     "read-more": "Leer más",
     "readonly": "Sólo lectura",
+    "reason": "Motivo",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucción completada",
     "rebuild-stock": "Reconstruir stock",
@@ -1274,6 +1286,7 @@
     "reference+description": "Referencia + Descripción",
     "refresh": "Recargar",
     "refresh-page": "Recargar página",
+    "refund": "Devolución",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Vrácení platebního dokladu %document%",
     "refunds": "Devoluciones",
@@ -1361,6 +1374,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Odeslat anonymní data",
     "send-audios": "Odeslat zvuky",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Odeslat dokumenty",
     "send-images": "Odeslat obrázky",
     "send-invoices": "Enviar facturas",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Error al enviar el email",
     "send-mail-ok": "Email enviado correctamente",
     "send-videos": "Odeslat videa",
+    "sent": "Odesláno",
     "sent-a-audio": "Odeslal zvuk",
     "sent-a-document": "Odeslal dokument",
     "sent-a-location": "Poslal polohu",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Transferencias de stock",
     "stockmax": "Stock máx.",
     "stockmin": "Stock mín.",
+    "storage": "Ubicación",
     "storage-limit-almost": "Téměř dosažen limit skladování (%limit%). Zbývá %free%",
     "storage-limit-reached": "Límite de almacenamiento alcanzado",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Valor total iva de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línea de IVA del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
     "totals": "Totales",
+    "totp-secret-key-not-set": "Uživatel %nick% nemá nastavený tajný klíč TOTP",
     "town": "Población",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
@@ -1578,11 +1595,12 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
+    "transport": "Transporte",
     "travel": "Cestování",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "2fázové ověření",
+    "two-factor-enabled": "Aktivovat dvoufázovou autentizaci",
     "type": "Tipo",
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
@@ -1667,10 +1685,11 @@
     "warehouses": "Almacenes",
     "warning": "Atención",
     "warnings": "Avisos",
-    "weak-password": "Heslo musí obsahovat alespoň 8 znaků, čísla a písmena.",
+    "weak-password": "Heslo musí mít alespoň 8 znaků, čísla a písmena.",
     "web": "Web",
     "website": "Web",
     "wednesday": "Miércoles",
+    "weekly": "Semanal",
     "weeks": "Semanas",
     "weight": "Peso",
     "which-logs-store": "Qué logs almacenar",
