--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -65,6 +65,7 @@
     "administrator": "amministratore",
     "adult": "Adulto",
     "advanced": "Avanzado",
+    "age": "età",
     "agent": "Agente",
     "agent-commission-info": "agente-commissione-info",
     "agent-dont-have-associated-supplier": "agente-non-ha-fornitori-affiliati",
@@ -160,6 +161,7 @@
     "billing": "Fatturazione",
     "billing-address": "Indirizzo Di Fatturazione",
     "birth-date": "Data di nascita",
+    "birthdate": "data di nascita",
     "birthday": "Compleanno",
     "block-date": "Data di blocco",
     "blocked": "bloccato",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Backup",
     "dashboard-backup-p": "Vi ricordiamo che avete installato FacturaScripts sul vostro PC, quindi i dati (fatture, clienti, ecc...) vengono memorizzati sul vostro PC e solo sul vostro PC. Fate regolarmente il backup e conservate quei backup lontano dal PC.",
     "dashboard-for": "Dashboard per",
+    "data-form-error": "Errore nei dati del modulo",
     "data-source": "Origine dei dati",
     "database": "Database",
     "database-error": "Errore di connessione al database",
@@ -454,6 +457,7 @@
     "description2": "Descrizione 2",
     "description3": "Descrizione 3",
     "design": "Design",
+    "destination": "Destinazione",
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
     "details": "Dettagli",
@@ -531,6 +535,7 @@
     "enabled": "Abilitato",
     "enabled-plugins": "Plugin attivi",
     "encrypt": "Crittazione",
+    "end": "Fine",
     "end-date": "Data di fine",
     "end-month": "Mese di fine",
     "end-time": "tempo finale",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Errore nel verificare il numero '%vat-number%' nel sistema VIES",
     "error-connecting-memcache": "Errore durante la connessione al server Memcache.",
     "error-deleting-lines": "Errore nella cancellazione delle righe",
+    "error-generating-qr-code": "Non è stato possibile generare il QR: %message%, %url%",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
     "error-on-xml-file": "Errore nel file XML %fileName%",
     "error-processing-xmlview": "Errore nell'elaborazione della vista XML, il file '0' non esiste o non è corretto",
@@ -592,6 +598,7 @@
     "exercises": "esercizi",
     "exit": "uscita",
     "expedient": "pratica",
+    "expedients": "Pratiche",
     "expense-subaccount": "Sottoconto per spese bancarie",
     "expenses": "Spese",
     "expiration": "Scadenza",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Cookie di sessione non valido: probabilmente hai effettuato l'accesso da un altro dispositivo o browser.",
     "login-image": "immagine di login",
     "login-ok": "Accedi con successo (cookie). Utente: '0'",
+    "login-password-changed": "Password cambiata correttamente",
     "login-password-fail": "Accesso fallito",
     "login-text": "Accesso",
     "login-to-continue": "Effettua il login per continuare",
@@ -1026,6 +1034,7 @@
     "no": "non",
     "no-data": "Nessun dato",
     "no-data-received-form": "Nessun dato ricevuto dal modulo",
+    "no-document-selected": "Nessun documento selezionato",
     "no-extra-lines": "Nessuna linea extra",
     "no-gaps-found": "Nessun gap trovato",
     "no-invoice": "Nessuna fattura",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "Non abbastanza stock di %reference%",
     "not-passed-integrity-check": "Alcuni file non hanno superato il controllo di integrità...<br\/>Puoi <a class='alert-link' target='_blank' href='IntegritySystemCheck'>ottenere ulteriori dettagli qui<\/a>.",
     "not-public": "Non pubblico",
+    "not-sent": "Non spedito",
     "not-stored-content": "Contenuto non memorizzato",
     "not-valid-email": "Email non valida %email%",
     "not-valid-fiscal-number": "Il %type% %number% non è valido",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "È necessaria l'estensione %extension% nella configurazione di PHP",
     "php-extension-not-found": "Non hai installato l'estensione PHP %extension%.",
     "php-support-end": "Il supporto per PHP %current% terminerà presto. Si prega di aggiornare PHP alla versione %min% o superiore.",
+    "php-version-too-new": "Si raccomanda di utilizzare una versione di PHP tra la %min_version% e la %max_version%. Attualmente hai la %version%",
     "physical-stock": "Stock fisico",
     "picking": "Selezione",
     "plan": "Piano",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Letto da %nick% il %date%",
     "read-more": "Leggi di più",
     "readonly": "sola lettura",
+    "reason": "Motivo",
     "rebuild": "ricostruire",
     "rebuild-completed": "Ricostruzione completata",
     "rebuild-stock": "Ricostruisci stock",
@@ -1274,6 +1286,7 @@
     "reference+description": "Riferimento + Descrizione",
     "refresh": "ricaricare",
     "refresh-page": "Aggiorna pagina",
+    "refund": "Rimborso",
     "refund-amount": "Importo rimborsato",
     "refund-payment-concept": "Rimborso del documento %document%",
     "refunds": "Rimborsi",
@@ -1361,6 +1374,7 @@
     "send": "Invia",
     "send-anonymous-data": "Invio di dati anonimi",
     "send-audios": "Invia audio",
+    "send-code-totp": "Inviare codice TOTP",
     "send-documents": "Inviare documenti",
     "send-images": "Invia immagini",
     "send-invoices": "Invia fatture",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Errore nell'invio dell'email",
     "send-mail-ok": "Email inviato correttamente",
     "send-videos": "Invia video",
+    "sent": "Inviato",
     "sent-a-audio": "Ha inviato un audio",
     "sent-a-document": "Ha inviato un documento",
     "sent-a-location": "Ha inviato una posizione",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "trasferimenti di magazzino",
     "stockmax": "Magazzino max",
     "stockmin": "Scorte min.",
+    "storage": "archiviazione",
     "storage-limit-almost": "Limite di archiviazione quasi raggiunto (%limit%). Restano %free%",
     "storage-limit-reached": "Limite di archiviazione raggiunto",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Importo totale della tassa pari a 0 1 non corretto (2). Importo corretto: 3",
     "totallinea-value-error": "Errore nel valore totallinea della riga IVA dell'imposta 0 della fattura. Valore corretto: 1",
     "totals": "Totali",
+    "totp-secret-key-not-set": "L'utente %nick% non ha configurato una chiave segreta TOTP",
     "town": "Cittadina",
     "tracking-code": "codice di tracciamento",
     "transfer": "trasferimento",
@@ -1578,6 +1595,7 @@
     "transfers-stock": "Trasferimenti di stock",
     "translation": "Traduzione",
     "translations": "Traduzioni",
+    "transport": "trasporto",
     "travel": "Viaggio",
     "try-again-later": "Riprova più tardi",
     "tuesday": "Martedì",
@@ -1671,6 +1689,7 @@
     "web": "web:",
     "website": "Sito web",
     "wednesday": "Mercoledì",
+    "weekly": "settimanale",
     "weeks": "Settimane",
     "weight": "Peso",
     "which-logs-store": "Quali log archiviare",
