--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adulto",
     "advanced": "Avançado",
+    "age": "idade",
     "agent": "Agente",
     "agent-commission-info": "Apenas será de aplicação ao agente selecionado",
     "agent-dont-have-associated-supplier": "O agente não tem um fornecedor associado",
@@ -160,6 +161,7 @@
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
     "birth-date": "Data de nascimento",
+    "birthdate": "Data de nascimento",
     "birthday": "Aniversário",
     "block-date": "Data de bloqueio",
     "blocked": "Bloqueado",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Cópia de segurança",
     "dashboard-backup-p": "Lembramos que tem o FacturaScripts instalado no seu PC, portanto os dados (faturas, clientes, etc...) são armazenados no seu PC e somente no seu PC. Faça backups regularmente e guarde esses backups longe do PC.",
     "dashboard-for": "Dashboard da %company%",
+    "data-form-error": "Erro nos dados do formulário",
     "data-source": "Dados de origem",
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
@@ -454,6 +457,7 @@
     "description2": "Descrição 2",
     "description3": "Descrição 3",
     "design": "Design",
+    "destination": "Destino",
     "destination-warehouse": "Armazém de destino",
     "detail": "Detalhe",
     "details": "Detalhes",
@@ -531,6 +535,7 @@
     "enabled": "Ativado",
     "enabled-plugins": "Plugins ativos",
     "encrypt": "Criptografia",
+    "end": "Fim",
     "end-date": "Data final",
     "end-month": "Fim de mês",
     "end-time": "Hora de finalização",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar linhas",
+    "error-generating-qr-code": "Não foi possível gerar o QR: %message%, %url%",
     "error-no-name-in-settings": "Erro na vista %viewName%. Falta informar a coluna 'name' no xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
@@ -592,6 +598,7 @@
     "exercises": "Exercícios",
     "exit": "Sair",
     "expedient": "Expediente",
+    "expedients": "Processos",
     "expense-subaccount": "Subconta para despesas bancárias",
     "expenses": "Despesas",
     "expiration": "Vencimento",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "Cookie de sessão inválida: provavelmente você fez login a partir de outro dispositivo ou navegador.",
     "login-image": "Imagem de login",
     "login-ok": "Faça o login com sucesso (cookie). Usuário: '0'",
+    "login-password-changed": "Senha alterada com sucesso",
     "login-password-fail": "Falha na autenticação",
     "login-text": "Entrar",
     "login-to-continue": "Faça login para continuar",
@@ -1026,6 +1034,7 @@
     "no": "Não",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
+    "no-document-selected": "Nenhum documento foi selecionado",
     "no-extra-lines": "Não adicionar linhas extras",
     "no-gaps-found": "N",
     "no-invoice": "Sem fatura",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "Não há stock suficiente de %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "Não público",
+    "not-sent": "Não enviado",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "O %type% %number% não é válido",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
     "php-support-end": "p",
+    "php-version-too-new": "Recomenda-se usar uma versão do PHP entre %min_version% e %max_version%. Atualmente, tem a %version%",
     "physical-stock": "Estoque físico",
     "picking": "Separação",
     "plan": "Plano",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Lido por %nick% em %date%",
     "read-more": "Ler mais",
     "readonly": "Apenas leitura",
+    "reason": "Razão",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrução concluída",
     "rebuild-stock": "reconstruir-estoque",
@@ -1274,6 +1286,7 @@
     "reference+description": "Referência + Descrição",
     "refresh": "Atualizar",
     "refresh-page": "Atualizar a página",
+    "refund": "Reembolso",
     "refund-amount": "Quantidade devolvida",
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
@@ -1361,6 +1374,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar dados anónimos",
     "send-audios": "Enviar áudios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imagens",
     "send-invoices": "Enviar faturas",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Erro ao enviar email",
     "send-mail-ok": "Email enviado corretamente",
     "send-videos": "Enviar vídeos",
+    "sent": "Enviado",
     "sent-a-audio": "Enviou um áudio",
     "sent-a-document": "Enviou um documento",
     "sent-a-location": "Enviou uma localização",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Transferências de stock",
     "stockmax": "Estoque max.",
     "stockmin": "Stock min.",
+    "storage": "armazenamento",
     "storage-limit-almost": "Limite de armazenamento quase atingido (%limit%). Restam %free%",
     "storage-limit-reached": "s",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "Valor de imposto total de 0 1 incorreto (2). Valor correto: 3",
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
     "totals": "Totais",
+    "totp-secret-key-not-set": "O usuário %nick% não tem uma chave secreta TOTP configurada",
     "town": "Cidade",
     "tracking-code": "Código de envio",
     "transfer": "Transferência",
@@ -1578,6 +1595,7 @@
     "transfers-stock": "Transferências de stock",
     "translation": "Tradução",
     "translations": "Traduções",
+    "transport": "Transporte",
     "travel": "Viagem",
     "try-again-later": "T",
     "tuesday": "terça-feira",
@@ -1619,7 +1637,7 @@
     "updated-records": "Registos atualizados %updatedRecords% de %totalRecords%",
     "updater": "Atualizador",
     "updates-available": "Atualizações disponíveis",
-    "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem falhas e adicionam novas funcionalidades.",
+    "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As actualizações corrigem falhas e adicionam novas funcionalidades.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
@@ -1671,6 +1689,7 @@
     "web": "Rede",
     "website": "Local na rede Internet",
     "wednesday": "quarta-feira",
+    "weekly": "Semanal",
     "weeks": "Semanas",
     "weight": "Peso",
     "which-logs-store": "Quais logs armazenar",
