--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -65,6 +65,7 @@
     "administrator": "Administrador",
     "adult": "Adult",
     "advanced": "Avançat",
+    "age": "edat",
     "agent": "Agent",
     "agent-commission-info": "Només s'aplicarà a l'agent seleccionat",
     "agent-dont-have-associated-supplier": "L'agent no té un proveïdor associat",
@@ -160,6 +161,7 @@
     "billing": "Facturació",
     "billing-address": "Direcció de facturació",
     "birth-date": "Data de naiximent",
+    "birthdate": "Data de naixement",
     "birthday": "Aniversari",
     "block-date": "Data de bloqueig",
     "blocked": "Bloquejat",
@@ -379,6 +381,7 @@
     "dashboard-backup": "Còpia de seguretat",
     "dashboard-backup-p": "Li recordem que té instal·lat FacturaScripts en el seu PC, per tant les dades (les factures, clients, etc...) s'emmagatzemen en el seu PC i únicament en el seu PC. Faci còpies de seguretat de forma regular i guarde aquestes còpies lluny de l'PC.",
     "dashboard-for": "Tauler de %company%",
+    "data-form-error": "Error en les dades del formulari",
     "data-source": "Senyes d'orige",
     "database": "base de dades",
     "database-error": "Error al connectar a la base de dades",
@@ -454,6 +457,7 @@
     "description2": "Descripció 2",
     "description3": "Descripció 3",
     "design": "Disseny",
+    "destination": "Destí",
     "destination-warehouse": "Almagasén de destí",
     "detail": "Detall",
     "details": "Detalls",
@@ -531,6 +535,7 @@
     "enabled": "Activat",
     "enabled-plugins": "Connectors actius",
     "encrypt": "Sifrar",
+    "end": "Fin",
     "end-date": "Data de fi",
     "end-month": "Mes de finalització",
     "end-time": "Hora de finalització",
@@ -545,6 +550,7 @@
     "error-checking-vat-number": "Error comprovant el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Ha hagut un erro conectant al servidor Memcaché.",
     "error-deleting-lines": "Erro borrant llínees",
+    "error-generating-qr-code": "No s'ha pogut generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Erro comprovant la vista %viewName%. No hi ha cap columna 'name' en el xml",
     "error-on-xml-file": "Erro en l'archiu %fileName%",
     "error-processing-xmlview": "Error en processar la vista XML, el fitxer '%fileName%' not existix o és incorrecte",
@@ -592,6 +598,7 @@
     "exercises": "Eixercicis",
     "exit": "Eixir",
     "expedient": "Expedient",
+    "expedients": "Expedients",
     "expense-subaccount": "Subconte de despeses",
     "expenses": "Despeses",
     "expiration": "Venciment",
@@ -906,6 +913,7 @@
     "login-cookie-fail": "La cookie de sessió no és vàlida: probablement heu iniciat sessió des d'un altre dispositiu o navegador.",
     "login-image": "Imagen de login",
     "login-ok": "Has iniciat sessió correctament (cookie) com a usuari: '%nick%'",
+    "login-password-changed": "Contrasenya canviada correctament",
     "login-password-fail": "L'usuari o la contrasenya no són correctes",
     "login-text": "Escriu el teu nom d'usuari i la contrasenya per a iniciar la sessió",
     "login-to-continue": "Inicia sessió per a continuar",
@@ -1026,6 +1034,7 @@
     "no": "No",
     "no-data": "No hi han senyes",
     "no-data-received-form": "Cap dada rebuda pel formulari",
+    "no-document-selected": "No s'ha seleccionat cap document",
     "no-extra-lines": "No afegir línies extra",
     "no-gaps-found": "Cap buit trobat",
     "no-invoice": "Sense factura",
@@ -1044,6 +1053,7 @@
     "not-enough-stock": "No hi ha suficient estoc de %reference%",
     "not-passed-integrity-check": "Alguns archius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtindre més detalls ací<\/a>.",
     "not-public": "No públic",
+    "not-sent": "No enviat",
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
     "not-valid-fiscal-number": "El %type% %number% no és vàlit",
@@ -1155,6 +1165,7 @@
     "php-extension-needed": "Es requereix l'extensió %extension% en la configuració de PHP",
     "php-extension-not-found": "No tens instalada l'extensió PHP %extension%.",
     "php-support-end": "El suport per a PHP  %current% acabarà pronte. Per favor, actualitza PHP a la versió %min% o superior.",
+    "php-version-too-new": "Es recomana usar una versió de PHP entre la %min_version% i la %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
     "picking": "Recollida",
     "plan": "Pla",
@@ -1252,6 +1263,7 @@
     "read-message-by": "Llegit per %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "Només lectura",
+    "reason": "reason",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrucció completada",
     "rebuild-stock": "Reconstruir estoc",
@@ -1274,6 +1286,7 @@
     "reference+description": "Referència + Descripció",
     "refresh": "Recarregar",
     "refresh-page": "Recarregar la pàgina",
+    "refund": "Devolució",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
@@ -1361,6 +1374,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar dades anònimes",
     "send-audios": "Envia àudios",
+    "send-code-totp": "Enviar codi TOTP",
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
     "send-invoices": "Enviar factures",
@@ -1369,6 +1383,7 @@
     "send-mail-error": "Hi ha hagut un erro a l'enviar el correu",
     "send-mail-ok": "El correu s'ha enviar correctament",
     "send-videos": "E",
+    "sent": "Enviat",
     "sent-a-audio": "Va enviar un àudio",
     "sent-a-document": "Envià un document",
     "sent-a-location": "Has enviat una ubicació",
@@ -1451,6 +1466,7 @@
     "stock-transfers": "Transferències d'estoc",
     "stockmax": "Estoc màxim",
     "stockmin": "Estoc mínim",
+    "storage": "emmagatzematge",
     "storage-limit-almost": "Límit d'emmagatzematge quasi aconseguit (%limit%). Resten %free%",
     "storage-limit-reached": "storage-limit-reached",
     "stripe": "Stripe",
@@ -1571,6 +1587,7 @@
     "totaliva-value-error": "El total del IVA de %docType% %docCode% és incorrecte (%docTotalTax%). La cantitat correcta és: %calcTotalTax%",
     "totallinea-value-error": "Erro en el valor totallinea de la llínea del IVA de l'impost %taxCode% de la factura. El valor correcte és: %totalLine%",
     "totals": "Totals",
+    "totp-secret-key-not-set": "L'usuari %nick% no té una clau secreta TOTP configurada",
     "town": "Ciutat",
     "tracking-code": "tracking-code",
     "transfer": "Transferència",
@@ -1578,6 +1595,7 @@
     "transfers-stock": "Transferències d'estoc",
     "translation": "Traducción",
     "translations": "Traduccions",
+    "transport": "Transport",
     "travel": "Viage",
     "try-again-later": "Prova una atra volta més tart",
     "tuesday": "tuesday",
@@ -1671,6 +1689,7 @@
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "wednesday",
+    "weekly": "setmanal",
     "weeks": "Semanes",
     "weight": "Peso",
     "which-logs-store": "Quins registes almagasenar",
